--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<tagname style="font-size:24pt;font-family:sans-serif;font-weight:bold">
+		<tagname style="font-size:24pt;">
 		<meta charset="utf-8">
 		<title>D3: Setting paragraphs' style conditionally, based on data</title>
 		<script type="text/javascript" src="../socialdata/d3.js"></script>
