--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<script type="text/javascript" src="../socialdata/d3.js"></script>
 	</head>
 	<body>
+		style="font-size:24pt;"
+		style="font-family:sans-serif;"
+		style="font-weight:bold;"
 		<script type="text/javascript">
 		
 			var dataset = [ 5, 10, 15, 20, 25 ];
