--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		
 		<meta charset="utf-8">
 		<title>D3: Setting paragraphs' style conditionally, based on data</title>
 		<script type="text/javascript" src="../socialdata/d3.js"></script>
 	</head>
-	<body>
+	<body style="color:red;">
+		
 		<script type="text/javascript">
-			style="font-size:24pt;"
-			style="font-family:sans-serif;"
-			style="font-weight:bold;"
 			var dataset = [ 5, 10, 15, 20, 25 ];
 			
 			d3.select("body").selectAll("p")
