--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		
 		<meta charset="utf-8">
 		<title>D3: Setting paragraphs' style conditionally, based on data</title>
-		<script type="text/javascript" src="./d3/d3.js"></script>
+		<script type="text/javascript" src="../socialdata/d3.js"></script>
 		<style type="text/css">
 			
 			.axis path,
