--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 	</head>
 	
 	<body>
-		<div>
+<!-- 		<div>
 			<h1> Histogram on total crimes</h1>
 			<p>Hover over for a suprise!</p>
 			<script src="./bars.js" type="text/javascript"></script>
 
-		</div>
+		</div> -->
 
 		<div>
 			<h1> Scatterplot that toggles from 2003 to 2015</h1>
