--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
 	</head>
 	
 	<body>
-<!-- 		<div>
+		<div>
 			<h1> Histogram on total crimes</h1>
 			<p>Hover over for a suprise!</p>
 			<script src="./bars.js" type="text/javascript"></script>
 
-		</div> -->
+		</div>
 
 		<div>
 			<h1> Scatterplot that toggles from 2003 to 2015</h1>
 			<p>We start with the values from 2003. Everytime you click to the sentence bellow the data will toggle between 2003-2015.The axis should stay the same in order for us to compare the data from the different years.</p>
 			<pp style="color:blue"><u>Click to toggle (2003-2015).</u></pp>
-	   		<script src="../socialdata/week7axis.js" type="text/javascript"></script>
+	   		<script src="../socialdata/week7.js" type="text/javascript"></script>
 
 		</div>
 
