--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 		
 			<h1> GeoData</h1>
 			<p style="border-bottom: 2px solid blue ;">We start with clustering of 2. Clicking on a button sets to a clustering while hovering lets you preview. The file size should be small in order to be read faster.</p>
-			<button2 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #bcbddc; text-decoration: none; display: inline-block;" type="button"> For K=2 clusters. </button2>
-			<button3 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #bcbddc; text-decoration: none; display: inline-block;" type="button">For K=3 clusters.</button3>
-			<button4 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #bcbddc; text-decoration: none; display: inline-block;" type="button">For K=4 clusters.</button4>
-			<button5 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #bcbddc; text-decoration: none; display: inline-block;" type="button">For K=5 clusters.</button5>
-			<button6 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #bcbddc; text-decoration: none; display: inline-block;" type="button">For K=6 clusters.</button6>
+			<button2 style="color:black; border:none; font-size:20px; border-radius: 7px; background-color: white; text-decoration: none; display: inline-block;" type="button"> For K=2 clusters. </button2>
+			<button3 style="color:black; border:none; font-size:20px; border-radius: 7px; background-color: white; text-decoration: none; display: inline-block;" type="button">For K=3 clusters.</button3>
+			<button4 style="color:black; border:none; font-size:20px; border-radius: 7px; background-color: white; text-decoration: none; display: inline-block;" type="button">For K=4 clusters.</button4>
+			<button5 style="color:black; border:none; font-size:20px; border-radius: 7px; background-color: white; text-decoration: none; display: inline-block;" type="button">For K=5 clusters.</button5>
+			<button6 style="color:black; border:none; font-size:20px; border-radius: 7px; background-color: white; text-decoration: none; display: inline-block;" type="button">For K=6 clusters.</button6>
 		<div id="area2">
 		</div>
 
