--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 		<div id="area1">
 			<h1> Scatterplot that toggles from 2003 to 2015</h1>
 			<p style="border-bottom: 2px solid green ;">We visualize San Francisco's crime
-				data from 2003 and 2015 reagarding the areas and the type of crime occured.
-				Each circle corresponds to a specific crime category while the radious of the circle is proportional to the number of
-				the total crimes. Use the toggle button to switch between 2003-2015.
-				We start with the values from 2003. Everytime you click to the sentence bellow the data will toggle between 2003-2015.
+				data from 2003 and 2015 reagarding the areas and the type of crime occured.</br>
+				Each circle corresponds to a specific area while the radious of the circle is proportional to the number of
+				the total crimes in that area. </br>Use the toggle button to switch between 2003-2015.</br>
+				We start with the values from 2003.</br> Everytime you click to the sentence bellow the data will toggle between 2003-2015.
 				The axis stay the same in order for us to compare the data from the different years.</p>
 	   		
 			<button style="color:white; border:none; font-size:20px; border-radius: 12px; background-color: #4CAF50; text-decoration: none; display: inline-block;" type="button">Click to toggle (2003-2015).</button>
@@ -40,12 +40,12 @@
 
 		
 			<h1> GeoData</h1>
-			<p style="border-bottom: 2px #414751 ;">Here we explore K-means clustering. The overall idea is that
-				each value of K has an associated view, where each of the K centroids is shown as a large colored dot,
-				and all GPS points belonging to that centroid are colored accordingly.
-				With the assigned buttons you can set different K values.
-				You can also hover above each button to preview the result.
-				We start with clustering of 2. The file size used should be small in order to be read faster.</p>
+			<p style="border-bottom: 2px #414751 ;">Here we explore K-means clustering. </br>The overall idea is that
+				each value of K has an associated view, </br>where each of the K centroids is shown as a large colored dot,
+				and all GPS points belonging to that centroid are colored accordingly.</br>
+				With the assigned buttons you can set different K values.</br>
+				You can also hover above each button to preview the result.</br>
+				We start with clustering of 2. </br>The file size used should be small in order to be read faster.</p>
 			<button2 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #414751; text-decoration: none; display: inline-block;" type="button"> For K=2 clusters. </button2>
 			<button3 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #414751; text-decoration: none; display: inline-block;" type="button">For K=3 clusters.</button3>
 			<button4 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #414751; text-decoration: none; display: inline-block;" type="button">For K=4 clusters.</button4>
