--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				data from 2003 and 2015 reagarding the areas and the type of crime occured.</br>
 				Each circle corresponds to a specific area while the radious of the circle is proportional to the number of
 				the total crimes in that area. </br>Use the toggle button to switch between 2003-2015.</br>
-				We start with the values from 2003.</br> Everytime you click to the sentence bellow the data will toggle between 2003-2015.
+				We start with the values from 2003.</br> Everytime you click to the sentence bellow the data will toggle between 2003-2015.</br>
 				The axis stay the same in order for us to compare the data from the different years.</p>
 	   		
 			<button style="color:white; border:none; font-size:20px; border-radius: 12px; background-color: #4CAF50; text-decoration: none; display: inline-block;" type="button">Click to toggle (2003-2015).</button>
@@ -40,7 +40,7 @@
 
 		
 			<h1> GeoData</h1>
-			<p style="border-bottom: 2px #414751 ;">Here we explore K-means clustering. </br>The overall idea is that
+			<p style="border-bottom: 2px solid #414751 ;">Here we explore K-means clustering. </br>The overall idea is that
 				each value of K has an associated view, </br>where each of the K centroids is shown as a large colored dot,
 				and all GPS points belonging to that centroid are colored accordingly.</br>
 				With the assigned buttons you can set different K values.</br>
