--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 				With the assigned buttons you can set different K values.</br>
 				You can also hover above each button to preview the result.</br>
 				We start with clustering of 2. </br>The file size used should be small in order to be read faster.</p>
-			<button2 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #414751; text-decoration: none; display: inline-block;" type="button">2 clusters. </button2>
-			<button3 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #414751; text-decoration: none; display: inline-block;" type="button">3 clusters.</button3>
-			<button4 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #414751; text-decoration: none; display: inline-block;" type="button">4 clusters.</button4>
-			<button5 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #414751; text-decoration: none; display: inline-block;" type="button">5 clusters.</button5>
-			<button6 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #414751; text-decoration: none; display: inline-block;" type="button">6 clusters.</button6>
+			<button2 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #414751; text-decoration: none; display: inline-block;" type="button">2 clusters </button2>
+			<button3 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #414751; text-decoration: none; display: inline-block;" type="button">3 clusters</button3>
+			<button4 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #414751; text-decoration: none; display: inline-block;" type="button">4 clusters</button4>
+			<button5 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #414751; text-decoration: none; display: inline-block;" type="button">5 clusters</button5>
+			<button6 style="color:white; border:none; font-size:20px; border-radius: 7px; background-color: #414751; text-decoration: none; display: inline-block;" type="button">6 clusters</button6>
 		<div id="area2">
 		</div>
 
