--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<script type="text/javascript" src="./d3.js"></script>
 		<script src="https://d3js.org/topojson.v2.min.js"></script>
 		<style type="text/css">
+			body{font-family:sans-serif;
+			}
+			
 			
 			.axis path,
 			.axis line {
